--- a/index.html
+++ b/index.html
@@ -1,307 +1,15 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lomba Quotes</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #ff8c00; /* Oranye */
-            margin: 0;
-        }
-        .logo-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo {
-            max-width: 150px; /* Sesuaikan ukuran logo */
-            height: auto;
-        }
-        .container {
-            background-color: #ffe0b2; /* Warna krem muda sebagai latar belakang konten */
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Efek 3D dengan bayangan */
-            width: 400px;
-            max-width: 90%;
-            position: relative; /* Untuk memposisikan tombol fixed di dalamnya */
-        }
-        h2 {
-            text-align: center;
-            color: #25d366; /* Warna hijau WhatsApp */
-            margin-bottom: 10px;
-        }
-        .hadiah-list {
-            margin-bottom: 20px;
-            padding-left: 20px;
-            color: #555;
-        }
-        .hadiah-list li {
-            margin-bottom: 5px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-            color: #333;
-        }
-        input[type="text"],
-        textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-        button[type="submit"] {
-            background-color: #25d366; /* Warna hijau WhatsApp */
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            width: 100%;
-            transition: background-color 0.3s ease;
-        }
-        button[type="submit"]:hover {
-            background-color: #128c7e;
-        }
-        button[type="submit"]:disabled {
-            background-color: #ccc;
-            color: #666;
-            cursor: not-allowed;
-        }
-        .info-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #f0ad4e; /* Warna oranye untuk info */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            z-index: 10; /* Ensure it's on top of other elements */
-        }
-        .info-button:hover {
-            background-color: #d9534f; /* Warna merah saat hover */
-        }
-        .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 11; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto; /* 15% from the top and centered */
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%; /* Could be more or less, depending on screen size */
-            border-radius: 8px;
-            position: relative;
-        }
-        .close-button {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close-button:hover,
-        .close-button:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .peserta-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .peserta-list li {
-            padding: 8px 0;
-            border-bottom: 1px solid #eee;
-        }
-        .peserta-list li:last-child {
-            border-bottom: none;
-        }
-        .payment-pending {
-            color: red;
-            font-style: italic;
-        }
-        .whatsapp-channel-button {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            background-color: #25d366; /* Warna hijau WhatsApp */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            z-index: 10;
-            animation: blinker 1s linear infinite;
-        }
-
-        @keyframes blinker {
-            50% { opacity: 0; }
-        }
-
-        .whatsapp-channel-button:hover {
-            background-color: #128c7e;
-        }
-        .nama-peserta {
-            color: #25d366; /* Warna hijau WhatsApp */
-        }
-    </style>
+<title>Langsung ke WhatsApp</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <a href="https://whatsapp.com/channel/0029Vb69F67EFeXt2W8BOb1i" target="_blank" class="whatsapp-channel-button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-            <path d="M13.687 2.327a.5.5 0 0 0-.68-.326l-2.765.916a.5.5 0 0 0-.269.185L6.95 5.786a.5.5 0 0 0-.085.38l.452 1.417a.5.5 0 0 0 .503.346l2.765-.916a.5.5 0 0 0 .269-.185l2.018-6.29a.5.5 0 0 0-.326-.68zM6.165 6.685a.5.5 0 0 0-.513.034l-.414.856a.5.5 0 0 0 .329.596l.513-.034a.5.5 0 0 0-.329-.596zm1.428 2.103a.5.5 0 0 0-.513.034l-.414.856a.5.5 0 0 0 .329.596l.513-.034a.5.5 0 0 0-.329-.596z"/>
-            <path d="M16 8c0 4.418-3.582 8-8 8a8.008 8.008 0 0 1-4.276-1.227L.652 13.664a.5.5 0 0 1-.293-.156l-.164-.156a.5.5 0 0 1-.03-.284L1.174 11.01a8.008 8.008 0 0 1-1.227-4.276C0 3.582 3.582 0 8 0s8 3.582 8 8zM8 1.96c-3.33 0-6.04 2.44-6.04 5.44a6.006 6.006 0 0 0 1.564 3.965L8 14.402l4.476-3.037a6.006 6.006 0 0 0 1.564-3.965C14.04 4.4 11.33 1.96 8 1.96z"/>
-        </svg> Channel
-    </a>
-    <div class="container">
-        <div class="logo-container">
-            <img src="https://f.top4top.io/p_33885dzox0.png" alt="Logo Lomba" class="logo">
-        </div>
-        <h2>LOMBA QUOTES</h2>
-        <ul class="hadiah-list">⚠️ HADIAH REAKSI
-            <li>Mencapai 1 = 1p</li>
-            <li>Mencapai 50 bonus 50p = 100p</li>
-            <li>Mencapai 100 bonus 100p = 200p</li>
-            <li>Mencapai 1k bonus 1k = 2k</li>
-        </ul>
-        <form id="whatsappForm">
-            <div class="form-group">
-                <label for="nama">Nama:</label>
-                <input type="text" id="nama" name="nama" placeholder="Masukkan nama Anda">
-            </div>
-            <div class="form-group">
-                <label for="emoji">Emoji:</label>
-                <input type="text" id="emoji" name="emoji" placeholder="Masukkan emoji keberuntungan kamu">
-            </div>
-            <div class="form-group">
-                <label for="pesan">Quetes:</label>
-                <textarea id="pesan" name="pesan" rows="4" placeholder="Masukkan quetes Anda"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="tambahan">Masukan no rek dana</label>
-                <input type="text" id="tambahan" name="tambahan" placeholder="no dana">
-            </div>
-            <p><i>batas waktu ikut serta jam 19:00 WIB</i>
-            <button type="submit" id="kirimWhatsapp">Kirim</button>
-        </form>
-    </div>
 
-    <button class="info-button" id="infoButton">Info Peserta</button>
+<script type="text/javascript">
+  window.location.href = "https://wa.me/6285732270872?text=Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=swwcewkx2&r=cAYM8h&orderId=20250413101214287515010300166998217530685";
+</script>
 
-    <div id="infoModal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h3>Informasi Peserta</h3>
-            <ul class="peserta-list">
-                <li>1. <span class="nama-peserta">iputyy</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>2. <span class="nama-peserta">rahma</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>3. <span class="nama-peserta">syifa</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>4. <span class="nama-peserta">ainun</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>5. <span class="nama-peserta">vanilla</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>6. <span class="nama-peserta">araaaimup</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>7. <span class="nama-peserta">farel</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>8. <span class="nama-peserta">aufa</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>9. <span class="nama-peserta">rizky</span> - Peserta Lomba Jum'at, 11 Apr</li>
-                <li>10. <span class="nama-peserta">nurizaazhr</span> - Peserta Lomba Jum'at, 11 Apr</li>
-
-               <li>11. <span class="nama-peserta">M Haikal</span> - Peserta Lomba Jum'at, 11 Apr</li> 
-            </ul>
-            <p class="payment-pending">Caption: Payment Pending <i>LOMBA BERAKHIR Besok jam 4 pagi</i><br>maaf untuk yg belum terpilih jangan khawatir, besok aku akan adakan lomba lagi</p>
-        </div>
-    </div>
-
-    <script>
-        const kirimWhatsappButton = document.getElementById('kirimWhatsapp');
-
-        function kunciTombolJikaLewatWaktu() {
-            const sekarang = new Date();
-            const batasWaktu = new Date();
-            batasWaktu.setHours(17, 0, 0, 0); // Set batas waktu ke jam 18:40:00
-
-            // Periksa apakah hari ini adalah tanggal 11 April 2025 dan waktu sudah lewat 19:00 WIB
-            if (sekarang.getFullYear() === 2025 &&
-                sekarang.getMonth() === 3 && // Bulan April (0-indexed)
-                sekarang.getDate() === 11 &&
-                sekarang >= batasWaktu) {
-                kirimWhatsappButton.disabled = true;
-            } else {
-                kirimWhatsappButton.disabled = false;
-            }
-        }
-
-        // Panggil fungsi saat halaman dimuat dan setiap detik untuk pembaruan real-time (opsional)
-        kunciTombolJikaLewatWaktu();
-        setInterval(kunciTombolJikaLewatWaktu, 1000); // Perbarui setiap detik
-
-        document.getElementById('whatsappForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Hanya jalankan jika tombol tidak terkunci
-            if (!kirimWhatsappButton.disabled) {
-                const nomorTelepon = "6285711374861";
-                const nama = document.getElementById('nama').value;
-                const emoji = document.getElementById('emoji').value;
-                const pesan = document.getElementById('pesan').value;
-                const tambahan = document.getElementById('tambahan').value;
-
-                let teks = `Quetes`;
-                if (emoji) {
-                    teks += `Jum'at 11 Apr`;
-                }
-                teks += `\n──────────────────────────────\n${pesan}\n──────────────────────────────`;
-
-                const encodedTeks = encodeURIComponent(teks);
-
-                const urlWhatsApp = `https://wa.me/${nomorTelepon}?text=${encodedTeks}%0a%0a> ${nama} ${emoji} ${tambahan}`;
-                window.open(urlWhatsApp, '_blank');
-            } else {
-                alert('Pengiriman quetes telah ditutup pada pukul 19:00 WIB.');
-            }
-        });
-
-        // JavaScript untuk modal info peserta (tetap sama)
-        const infoButton = document.getElementById("infoButton");
-        const infoModal = document.getElementById("infoModal");
-        const closeButton = document.getElementsByClassName("close-button")[0];
-
-        infoButton.addEventListener('click', function() {
-            infoModal.style.display = "block";
-        });
-
-        closeButton.addEventListener('click', function() {
-            infoModal.style.display = "none";
-        });
-
-        window.addEventListener('click', function(event) {
-            if (event.target == infoModal) {
-                infoModal.style.display = "none";
-            }
-        });
-    </script>
 </body>
 </html>
