--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <script type="text/javascript">
-  window.location.href = "https://wa.me/6285732270872?text=Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=swwcewkx2&r=cAYM8h&orderId=20250413101214287515010300166998217530685";
+  window.location.href = "https://wa.me/62882005036283?text=Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s9paeba9b&r=cAYM8h&orderId=20250413101214038315010300166998217466964%0ATerkadang malam itu gelap, semoga harimu menyenangkan";
 </script>
 
 </body>
