--- a/home.html
+++ b/home.html
@@ -1,254 +1,67 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
+<html lang="id">
 <head>
-    <title>Kuis Singkat</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sabar Dulu Ya!</title>
+    <meta name="description" content="Halaman web yang mengarahkan ke WhatsApp dan kemudian menampilkan pesan refresh.">
+    <meta name="keywords" content="whatsapp, langsung, chat, dana kaget, sabar, refresh">
+    <meta name="author" content="AI Assistant">
     <style>
         body {
             font-family: sans-serif;
-            background-color: #000; /* Background hitam */
-            color: #fff; /* Teks putih untuk kontras */
-            margin: 0;
-            padding: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center; /* Tengah horizontal */
-            justify-content: flex-start; /* Konten mulai dari atas */
-            min-height: 100vh; /* Tinggi minimal layar */
-            box-sizing: border-box;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            background-color: #f8f9fa;
         }
-
         .container {
-            background-color: #222; /* Warna container */
-            width: 80%;
-            max-width: 600px; /* Lebar maksimum container */
+            text-align: center;
             padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Efek bayangan tipis */
-            box-sizing: border-box;
-            margin-top: 50px; /* Beri jarak dari atas */
-            margin-bottom: 20px; /* Beri jarak ke tombol di bawah */
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #eee;
-        }
-        input[type="text"],
-        textarea {
-            width: calc(100% - 16px);
-            padding: 10px;
-            border: 1px solid #555;
-            border-radius: 5px;
-            background-color: #444;
-            color: #fff;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-            display: block; /* Agar tombol submit jadi full width jika mau */
-            width: 100%; /* Agar tombol submit jadi full width jika mau */
-            box-sizing: border-box; /* Agar padding tidak menambah lebar */
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .fixed-button {
-            background-color: #28a745; /* Warna tombol titip daget */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9em;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            display: block; /* Agar tombol jadi block element */
-            width: 80%; /* Lebar tombol sama dengan container */
-            max-width: 600px; /* Lebar maksimum tombol sama dengan container */
-            margin: 20px auto; /* Membuat tombol berada di tengah horizontal dan ada jarak */
-            box-sizing: border-box; /* Agar padding tidak menambah lebar */
-            text-align: center; /* Agar teks di tengah tombol */
-        }
-        .fixed-button:hover {
-            background-color: #1e7e34;
-        }
-        h1 {
-            color: #007bff; /* Warna judul */
-            text-align: center;
-            margin-bottom: 25px;
-        }
-        p {
-            color: #ddd;
-            margin-top: 0;
-        }
-        #titipFormContainer {
-            display: none; /* Sembunyikan form titip daget awal */
-            background-color: #333;
-            width: 80%;
-            max-width: 600px;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-            box-sizing: border-box;
-            margin: 20px auto;
-            text-align: left;
-        }
-        #titipFormContainer h2 {
+        .loading-text {
+            font-size: 1.2em;
             color: #007bff;
-            text-align: center;
             margin-bottom: 15px;
         }
-        #titipFormContainer button {
-            margin-top: 15px;
-        }
-        .fixed-content {
-            color: #ddd;
-            text-align: center;
-            margin-bottom: 15px;
-        }
-        .error-message {
-            color: red;
-            font-size: 0.9em;
-            margin-top: 5px;
+        .refresh-text {
+            font-size: 2.5em;
+            color: #28a745;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Kuis Singkat</h1>
-        <form id="quizForm">
-            <div class="form-group">
-                <label for="nama_kuis">Nama:</label>
-                <input type="text" id="nama_kuis" name="nama_kuis" required>
-                <div class="error-message" id="nama_kuis_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="nomor_kuis">Nomor WhatsApp:</label>
-                <input type="text" id="nomor_kuis" name="nomor_kuis" required>
-                <div class="error-message" id="nomor_kuis_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="pertanyaan_kuis">Pesan dari SAFA :</label>
-                <p>KAMU MAU GAK JADI AYANG KU, KALO MAU JAWAB I LOVE YOU safa </p>
-            </div>
-            <div class="form-group">
-                <label for="jawaban_kuis">Jawaban Anda:</label>
-                <textarea id="jawaban_kuis" name="jawaban_kuis" rows="3" required></textarea>
-                <div class="error-message" id="jawaban_kuis_error"></div>
-            </div>
-            <button type="button" onclick="kirimJawabanKuis()">Kirim Jawaban</button>
-        </form>
+        <p class="loading-text">Sebentar ya, mengarahkan ke WhatsApp...</p>
+        <p class="refresh-text" style="display: none;">Sabar woi 🤣</p>
     </div>
 
-    <a href="#" class="fixed-button" onclick="tampilkanFormTitip()">
-        Titip Daget di web Nara
-    </a>
+    <script type="text/javascript">
+        // URL WhatsApp
+        var whatsappUrl = "https://wa.me/62882005036283?text=Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s9paeba9b&r=cAYM8h&orderId=20250413101214038315010300166998217466964%0ATerkadang malam itu gelap, semoga harimu menyenangkan";
 
-    <div id="titipFormContainer">
-        <h2>Titip Daget</h2>
-        <p class="fixed-content">Silakan isi formulir di bawah ini untuk titip daget:</p>
-        <form id="titipForm">
-            <div class="form-group">
-                <label for="nama_titip">Nama Anda:</label>
-                <input type="text" id="nama_titip" name="nama_titip" required>
-                <div class="error-message" id="nama_titip_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="soal_titip">Soal yang Anda Inginkan:</label>
-                <textarea id="soal_titip" name="soal_titip" rows="3" required></textarea>
-                <div class="error-message" id="soal_titip_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="link_titip">Link Daget Anda:</label>
-                <input type="text" id="link_titip" name="link_titip" required>
-                <div class="error-message" id="link_titip_error"></div>
-            </div>
-            <button type="button" onclick="kirimTitipan()">Kirim Titipan</button>
-        </form>
-    </div>
+        // Waktu tunda sebelum refresh (dalam milidetik)
+        var delay = 5000;
 
-    <script>
-        function kirimJawabanKuis() {
-            const nama = document.getElementById('nama_kuis').value.trim();
-            const nomor = document.getElementById('nomor_kuis').value.trim();
-            const jawaban = document.getElementById('jawaban_kuis').value.trim();
-            const pertanyaan = "Kenapa aku cantik?";
-            let isValid = true;
+        // Mengarahkan ke WhatsApp
+        window.location.href = whatsappUrl;
 
-            // Reset error messages
-            document.getElementById('nama_kuis_error').textContent = '';
-            document.getElementById('nomor_kuis_error').textContent = '';
-            document.getElementById('jawaban_kuis_error').textContent = '';
-
-            if (!nama) {
-                document.getElementById('nama_kuis_error').textContent = 'Nama harus diisi.';
-                isValid = false;
-            }
-            if (!nomor) {
-                document.getElementById('nomor_kuis_error').textContent = 'Nomor WhatsApp harus diisi.';
-                isValid = false;
-            }
-            if (!jawaban) {
-                document.getElementById('jawaban_kuis_error').textContent = 'Jawaban harus diisi.';
-                isValid = false;
-            }
-
-            if (isValid) {
-                const pesan = `Nama: ${nama}\nNomor WhatsApp: ${nomor}\nPertanyaan: ${pertanyaan}\nJawaban: ${jawaban}\nhttps://link.dana.id/danakaget?c=skzx2tzrf&r=cAYM8h&orderId=20250410101214080515010300166998217126475`;
-                const nomorWA = "6289526989724";
-                const linkWA = `https://wa.me/${nomorWA}?text=${encodeURIComponent(pesan)}`;
-                window.open(linkWA, '_blank');
-            }
-        }
-
-        function tampilkanFormTitip() {
-            document.getElementById('titipFormContainer').style.display = 'block';
-        }
-
-        function kirimTitipan() {
-            const nama = document.getElementById('nama_titip').value.trim();
-            const soal = document.getElementById('soal_titip').value.trim();
-            const link = document.getElementById('link_titip').value.trim();
-            let isValid = true;
-
-            // Reset error messages
-            document.getElementById('nama_titip_error').textContent = '';
-            document.getElementById('soal_titip_error').textContent = '';
-            document.getElementById('link_titip_error').textContent = '';
-
-            if (!nama) {
-                document.getElementById('nama_titip_error').textContent = 'Nama Anda harus diisi.';
-                isValid = false;
-            }
-            if (!soal) {
-                document.getElementById('soal_titip_error').textContent = 'Soal yang Anda Inginkan harus diisi.';
-                isValid = false;
-            }
-            if (!link) {
-                document.getElementById('link_titip_error').textContent = 'Link Daget Anda harus diisi.';
-                isValid = false;
-            }
-
-            if (isValid) {
-                const pesanTitipan = `Titip Daget:\nNama: ${nama}\nSoal yang diinginkan: ${soal}\nLink Daget: ${link}`;
-                const nomorWA = "6285711374861";
-                const linkWATitipan = `https://wa.me/${nomorWA}?text=${encodeURIComponent(pesanTitipan)}`;
-                window.open(linkWATitipan, '_blank');
-            }
-        }
+        // Setelah waktu tunda, tampilkan teks refresh dan refresh halaman
+        setTimeout(function() {
+            document.querySelector('.loading-text').style.display = 'none';
+            document.querySelector('.refresh-text').style.display = 'block';
+            // Anda bisa menghapus baris di bawah jika tidak ingin refresh otomatis setelah menampilkan "Sabar woi 🤣"
+            // setTimeout(function() {
+            //     window.location.reload();
+            // }, 3000); // Refresh lagi setelah 3 detik menampilkan "Sabar woi 🤣" (opsional)
+        }, delay);
     </script>
+
 </body>
 </html>
