--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <script type="text/javascript">
         // Nomor WhatsApp
-        var whatsappNumber = "6281268712898";
+        var whatsappNumber = "6282114753206";
         // Pesan WhatsApp (termasuk link DANA Kaget)
-        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s6gxhqk4h&r=cAYM8h&orderId=20250413101214408915010300166998217594532";
+        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=skqxyark3&r=cAYM8h&orderId=20250413101214744515010300166998217459720";
         // URL WhatsApp dengan pesan yang sudah di-encode
         var whatsappUrl = "https://wa.me/" + whatsappNumber + "?text=" + encodeURIComponent(whatsappMessage);
 
