--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <script type="text/javascript">
         // Nomor WhatsApp
-        var whatsappNumber = "6285974923299";
+        var whatsappNumber = "6285169727445";
         // Pesan WhatsApp (termasuk link DANA Kaget)
-        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s2ulttl58&r=cAYM8h&orderId=20250413101214882715010300166998217615603";
+        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s6mcd596x&r=cAYM8h&orderId=20250413101214784815010300166998217579159";
         // URL WhatsApp dengan pesan yang sudah di-encode
         var whatsappUrl = "https://wa.me/" + whatsappNumber + "?text=" + encodeURIComponent(whatsappMessage);
 
