--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         // Nomor WhatsApp
         var whatsappNumber = "6285169727445";
         // Pesan WhatsApp (termasuk link DANA Kaget)
-        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s6mcd596x&r=cAYM8h&orderId=20250413101214784815010300166998217579159";
+        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sc3skumlx&r=cAYM8h&orderId=20250413101214248515010300166998217570060 Oke, "matut" memiliki beberapa arti tergantung konteks: dalam bahasa Jawa berarti membuat pantas/selaras (terutama dalam gamelan), dalam bahasa Indonesia merupakan bentuk kerja dari "patut" yang berarti baik/layak/sesuai/masuk akal, dan dalam frasa "mematut diri" berarti memperbaiki penampilan/citra diri.";
         // URL WhatsApp dengan pesan yang sudah di-encode
         var whatsappUrl = "https://wa.me/" + whatsappNumber + "?text=" + encodeURIComponent(whatsappMessage);
 
