--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <script type="text/javascript">
         // Nomor WhatsApp
-        var whatsappNumber = "6285169727445";
+        var whatsappNumber = "6281564943926";
         // Pesan WhatsApp (termasuk link DANA Kaget dan teks tambahan)
-        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sc3skumlx&r=cAYM8h&orderId=20250413101214248515010300166998217570060\n\nOke, \"matut\" memiliki beberapa arti tergantung konteks: dalam bahasa Jawa berarti membuat pantas/selaras (terutama dalam gamelan), dalam bahasa Indonesia merupakan bentuk kerja dari \"patut\" yang berarti baik/layak/sesuai/masuk akal, dan dalam frasa \"mematut diri\" berarti memperbaiki penampilan/citra diri.";
+        var whatsappMessage = "Gua ga omdo , nih link buat lu https://link.dana.id/danakaget?c=skzx5ccjj&r=cAYM8h&orderId=20250413101214288715010300166998217501667";
         // URL WhatsApp dengan pesan yang sudah di-encode
         var whatsappUrl = "https://wa.me/" + whatsappNumber + "?text=" + encodeURIComponent(whatsappMessage);
 
