--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <script type="text/javascript">
         // Nomor WhatsApp
-        var whatsappNumber = "6281564943926";
+        var whatsappNumber = "6285974923298";
         // Pesan WhatsApp (termasuk link DANA Kaget dan teks tambahan)
-        var whatsappMessage = "Gua ga omdo , nih link buat lu https://link.dana.id/danakaget?c=skzx5ccjj&r=cAYM8h&orderId=20250413101214288715010300166998217501667";
+        var whatsappMessage = "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=svakgraqp&r=cAYM8h&orderId=20250413101214820515010300166998217512270";
         // URL WhatsApp dengan pesan yang sudah di-encode
         var whatsappUrl = "https://wa.me/" + whatsappNumber + "?text=" + encodeURIComponent(whatsappMessage);
 
